--- a/WAVES 23/glasseventsCARD.html
+++ b/WAVES 23/glasseventsCARD.html
@@ -48,46 +48,49 @@
       <h1 class="team_st">TECH EVENTS</h1>
       
       <div class="event_box">
-        <div class="single_event">
+         <div class="single_event">
             <div class="event_no">
-                <h1>T-1</h1>
+                <h1>NT-1</h1>
             </div>
             <div class="event_img">
                 <img src="images/tech2.jpeg">
             </div>
-          <div class="event_card"></div>
-          <div class="event_desc">
-              <p>Setting this option will make the element respond to any mouse movements on page.</p>
-                <a href="">Register</a>
-          </div>
+           <div class="event_card"></div>
+              <div class="event_desc">
+                    <h2>EVENT NAME</h2>
+                  <p>Setting this option will make the element respond to any mouse movements on page.</p>
+                    <a href="">Register</a>
+              </div>
 
         </div>
-        <div class="single_event">
+         <div class="single_event">
             <div class="event_no">
-                <h1>T-2</h1>
+                <h1>NT-1</h1>
             </div>
             <div class="event_img">
                 <img src="images/tech2.jpeg">
             </div>
-          <div class="event_card"></div>
-          <div class="event_desc">
-              <p>Setting this option will make the element respond to any mouse movements on page.</p>
-                <a href="">Register</a>
-          </div>
+           <div class="event_card"></div>
+              <div class="event_desc">
+                    <h2>EVENT NAME</h2>
+                  <p>Setting this option will make the element respond to any mouse movements on page.</p>
+                    <a href="">Register</a>
+              </div>
 
-        </div>
+        </div> 
         <div class="single_event">
             <div class="event_no">
-                <h1>T-3</h1>
+                <h1>NT-1</h1>
             </div>
             <div class="event_img">
                 <img src="images/tech2.jpeg">
             </div>
-          <div class="event_card"></div>
-          <div class="event_desc">
-              <p>Setting this option will make the element respond to any mouse movements on page.</p>
-                <a href="">Register</a>
-          </div>
+           <div class="event_card"></div>
+              <div class="event_desc">
+                    <h2>EVENT NAME</h2>
+                  <p>Setting this option will make the element respond to any mouse movements on page.</p>
+                    <a href="">Register</a>
+              </div>
 
         </div>
       </div>
@@ -102,39 +105,42 @@
             <div class="event_img">
                 <img src="images/tech2.jpeg">
             </div>
-          <div class="event_card"></div>
-          <div class="event_desc">
-              <p>Setting this option will make the element respond to any mouse movements on page.</p>
-                <a href="">Register</a>
-          </div>
+           <div class="event_card"></div>
+              <div class="event_desc">
+                    <h2>EVENT NAME</h2>
+                  <p>Setting this option will make the element respond to any mouse movements on page.</p>
+                    <a href="">Register</a>
+              </div>
 
         </div>
         <div class="single_event">
             <div class="event_no">
-                <h1>NT-2</h1>
+                <h1>NT-1</h1>
             </div>
             <div class="event_img">
                 <img src="images/tech2.jpeg">
             </div>
-          <div class="event_card"></div>
-          <div class="event_desc">
-              <p>Setting this option will make the element respond to any mouse movements on page.</p>
-                <a href="">Register</a>
-          </div>
+           <div class="event_card"></div>
+              <div class="event_desc">
+                    <h2>EVENT NAME</h2>
+                  <p>Setting this option will make the element respond to any mouse movements on page.</p>
+                    <a href="">Register</a>
+              </div>
 
         </div>
-        <div class="single_event">
+         <div class="single_event">
             <div class="event_no">
-                <h1>NT-3</h1>
+                <h1>NT-1</h1>
             </div>
             <div class="event_img">
                 <img src="images/tech2.jpeg">
             </div>
-          <div class="event_card"></div>
-          <div class="event_desc">
-              <p>Setting this option will make the element respond to any mouse movements on page.</p>
-                <a href="">Register</a>
-          </div>
+           <div class="event_card"></div>
+              <div class="event_desc">
+                    <h2>EVENT NAME</h2>
+                  <p>Setting this option will make the element respond to any mouse movements on page.</p>
+                    <a href="">Register</a>
+              </div>
 
         </div>
       </div>
