--- a/WAVES 23/mainauto.html
+++ b/WAVES 23/mainauto.html
@@ -118,21 +118,21 @@
 
 <script>
 	var typed = new Typed(".auto_type",{
-		strings:["Ev AutoShow"],
+		strings:["Ev AutoShow..."],
 		typeSpeed : 60,
 		backSpeed : 60,
 		loop : true,
 	})
 
 	var typed = new Typed(".auto_type2",{
-		strings:["Project Display"],
+		strings:["Project Display..."],
 		typeSpeed : 60,
 		backSpeed : 60,
 		loop : true,
 	})
 
 	var typed = new Typed(".auto_type3",{
-		strings:["Carnival"],
+		strings:["Carnival..."],
 		typeSpeed : 60,
 		backSpeed : 60,
 		loop : true,
